--- a/EFLess/EFLess/EFLess.csproj
+++ b/EFLess/EFLess/EFLess.csproj
@@ -57,6 +57,7 @@
     <Compile Include="MyDBContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Song.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
