--- a/Ch_11/Ch_11/Ch_11.csproj
+++ b/Ch_11/Ch_11/Ch_11.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MailManager.cs" />
     <Compile Include="NewMailEventArgs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
