--- a/Ch_11/Ch_11/Ch_11.csproj
+++ b/Ch_11/Ch_11/Ch_11.csproj
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Compile Include="MailManager.cs" />
     <Compile Include="NewMailEventArgs.cs" />
+    <Compile Include="Printer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SMS.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
