--- a/Ch_11_2/Ch_11_2/Ch_11_2.csproj
+++ b/Ch_11_2/Ch_11_2/Ch_11_2.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventSet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeWithLotsEvents.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
