--- a/Ch_12_5/Ch_12_5/Ch_12_5.csproj
+++ b/Ch_12_5/Ch_12_5/Ch_12_5.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class3.cs" />
     <Compile Include="Comparer.cs" />
     <Compile Include="PClass.cs" />
     <Compile Include="Program.cs" />
