--- a/FactoryMethod/FactoryMethod/FactoryMethod.csproj
+++ b/FactoryMethod/FactoryMethod/FactoryMethod.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMessage.cs" />
+    <Compile Include="IMessanger.cs" />
+    <Compile Include="MessageBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestMessage.cs" />
