--- a/FactoryMethod/FactoryMethod/FactoryMethod.csproj
+++ b/FactoryMethod/FactoryMethod/FactoryMethod.csproj
@@ -46,10 +46,13 @@
     <Compile Include="IMessage.cs" />
     <Compile Include="IMessanger.cs" />
     <Compile Include="MessageBase.cs" />
+    <Compile Include="MessangerBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestMessage.cs" />
     <Compile Include="TestMessanger.cs" />
+    <Compile Include="TwitterMessage.cs" />
+    <Compile Include="TwitterMessanger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
