ADD doubly linked list v2

--- a/DoublyLinkedList/DoublyLinkedList/DoublyLinkedList.csproj
+++ b/DoublyLinkedList/DoublyLinkedList/DoublyLinkedList.csproj
@@ -43,11 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\DuplexList.cs" />
+    <Compile Include="Model\DuplexItem.cs" />
+    <Compile Include="Model\Item.cs" />
+    <Compile Include="Model\LinkedList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
