--- a/HashTableCB/HashTableCB/HashTableCB.csproj
+++ b/HashTableCB/HashTableCB/HashTableCB.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HashTAbleCodeBlog.cs" />
+    <Compile Include="HashTableV2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
