--- a/HashTableCB/HashTableCB/HashTableCB.csproj
+++ b/HashTableCB/HashTableCB/HashTableCB.csproj
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Compile Include="HashTAbleCodeBlog.cs" />
     <Compile Include="HashTableV2.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuperHashTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
