--- a/MapAndDitionary/MapAndDitionary/MapAndDitionary.csproj
+++ b/MapAndDitionary/MapAndDitionary/MapAndDitionary.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dict.cs" />
     <Compile Include="EasyMap.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
