--- a/QueueDeque/QueueDeque/QueueDeque.csproj
+++ b/QueueDeque/QueueDeque/QueueDeque.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\ArrayQueue.cs" />
     <Compile Include="Model\EseayQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
