--- a/QueueDeque/QueueDeque/QueueDeque.csproj
+++ b/QueueDeque/QueueDeque/QueueDeque.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Model\ArrayQueue.cs" />
     <Compile Include="Model\EseayQueue.cs" />
+    <Compile Include="Model\Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
