--- a/QueueDeque/QueueDeque/QueueDeque.csproj
+++ b/QueueDeque/QueueDeque/QueueDeque.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Model\ArrayQueue.cs" />
     <Compile Include="Model\EseayQueue.cs" />
     <Compile Include="Model\Item.cs" />
+    <Compile Include="Model\LinkedQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
