--- a/Practice1/CodeBlogFit.BL/CodeBlogFit.BL.csproj
+++ b/Practice1/CodeBlogFit.BL/CodeBlogFit.BL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Controller\UserController.cs" />
+    <Compile Include="Model\Food.cs" />
     <Compile Include="Model\Gender.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
